# plex-sub-downloader

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
plex_sub_downloader/: PlexSubDownloader.py  PlexWebhookEvent.py  config.schema.json  logger.py  plex_sub_downloader.py  subliminalHelper.py
src/plex_sub_downloader/: PlexSubDownloader.py  PlexWebhookEvent.py  config.schema.json  plexHelper.py  plex_sub_downloader.py  subliminalHelper.py
